mysql environment change

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 WEB_PORT=80
 DB_PORT=3306
 
-DB_NAME=db_name
-DB_USER=db_user
-DB_PASSWORD=db_password
+DB_NAME=db_week8
+DB_USER=tsuyotada
+DB_PASSWORD=password
 DB_ROOT_PASSWORD=root
