--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - ./src/:/var/www/html
 
   db:
+    platform: linux/x86_64
     build:
       context: .
       dockerfile: ./docker/mysql/Dockerfile
