--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -1,5 +1,13 @@
-FROM mysql:8.0
+FROM mysql:8-debian
 
-ENV TZ=UTC
+RUN apt-get update -y && \
+    apt-get install -y locales && \
+    echo "ja_JP.UTF-8 UTF-8" > /etc/locale.gen && \
+    locale-gen && \
+    update-locale LANG=ja_JP.UTF-8 
 
-COPY ./docker/mysql/my.cnf /etc/my.cnf
+ENV LANG ja_JP.UTF-8
+ENV LANGUAGE ja_JP:ja
+ENV LC_ALL=ja_JP.UTF-8
+
+CMD ["mysqld", "--character-set-server=utf8", "--collation-server=utf8_unicode_ci"]
