--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -1,27 +1,14 @@
 [mysqld]
-user=mysql
-character_set_server = utf8mb4
-collation_server = utf8mb4_0900_ai_ci
-
-# timezone
-default-time-zone = SYSTEM
-log_timestamps = SYSTEM
-
-# Error Log
-log-error = mysql-error.log
-
-# Slow Query Log
-slow_query_log = 1
-slow_query_log_file = mysql-slow.log
-long_query_time = 1.0
-log_queries_not_using_indexes = 0
-
-# General Log
-general_log = 1
-general_log_file = mysql-general.log
-
-[mysql]
-default-character-set = utf8mb4
+character-set-server=utf8
+collation-server=utf8_general_ci
+default-time-zone = 'Asia/Tokyo'
+default_authentication_plugin=mysql_native_password
 
 [client]
-default-character-set = utf8mb4
+default-character-set=utf8
+
+[mysql]
+default-character-set=utf8
+
+[mysqldump]
+default-character-set=utf8
