--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,18 @@ services:
   frontend:
     image: node:lts
     container_name: frontend
+    expose:
+      - ${FRONTEND_PORT}
     ports:
-      - ${FRONTEND_PORT}:8080
+      - ${FRONTEND_PORT}:3000
     volumes:
       - ./:/src
-    working_dir: "/src/vuejs"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
+    working_dir: "/src/next"
     tty: true
+    command: npm run dev
 
   backend:
     build:
@@ -25,6 +31,8 @@ services:
     build:
       context: .
       dockerfile: ./docker/nginx/Dockerfile
+    expose:
+      - ${BACKEND_PORT}
     ports:
       - ${BACKEND_PORT}:80
     depends_on:
